@@ -26,6 +26,8 @@ Avro 1.3.1 (unreleased)
 
     AVRO-437. Fix some typos in docs. (Amichai Rothman via cutting)
 
+    AVRO-433. Fix exceptions in Java reflect RPC. (cutting)
+
 Avro 1.3.0 (24 February 2010)
 
   INCOMPATIBLE CHANGES
